# micro_ros_setup

./: .ci-dockerfile  .gitlab-ci.yml  .gitmodules  20-default.list  3rd-party-licenses.txt  3rdparty-licenses.txt  CHANGELOG.rst  CMakeLists.txt  Dockerfile.ci-base  LICENSE  NOTICE  PR.md  README.md  package.xml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: general-issue.md
.github/workflows/: CI_0.yml  build_zenoh_pico.yml  ci.yml  nightly.yml
config/: agent_ros2_packages.txt  agent_uros_packages.repos  client_ros2_packages.txt  client_uros_packages.repos  utils.sh
config/android/: dev_ros2_packages.txt
config/android/generic/: build.sh  client_uros_packages.repos  create.sh  flash.sh  package.xml  reset.sh
config/freertos/: list_apps.sh
config/freertos/crazyflie21/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  package.xml
config/freertos/crazyflie21/patchs/: 0001-Add-tx-queue-utilities.patch  0001-Remove-assert.patch
config/freertos/esp32/: README.md  board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  package.xml
config/freertos/nucleo_f446re/: board.repos  build.sh  configure.sh  create.sh  flash.sh  package.xml  reset.sh
config/freertos/nucleo_f446ze/: board.repos  client_uros_packages.repos  configure.sh  create.sh  reset.sh
config/freertos/nucleo_f746zg/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  package.xml  reset.sh
config/freertos/nucleo_f767zi/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  package.xml  reset.sh
config/freertos/olimex-stm32-e407/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  reset.sh
config/generate_lib/generic/: build.sh  client_uros_packages.repos  create.sh  demo_toolchain.cmake  package.xml
config/host/: client_ros2_packages.txt
config/host-zenoh-c/generic/: build.sh  client_host_packages.repos
config/host-zenoh-pico/generic/: build.sh  client_host_packages.repos  create.sh
config/host-zenoh/generic/: build.sh  client_host_packages.repos  flash.sh  package.xml
config/host/generic/: build.sh  client_host_packages.repos  create.sh  reset.sh
config/mbed/: dev_ros2_packages.txt  list_apps.sh
config/mbed/generic/: board.repos  build.sh  create.sh  flash.sh  package.xml  supported_platforms
config/nuttx/: dev_uros_packages.repos
config/nuttx/generic/: build.sh  (+7 more)
config/renesas_ra/: dev_ros2_packages.txt  list_apps.sh
config/rtthread/: README.md  list_apps.sh
config/zephyr/: dev_ros2_packages.txt  list_apps.sh
doc/: design.md  nuttx_background.md
docker/: Dockerfile.agent  Dockerfile.firmware  Dockerfile.host_client
micro_ros_cmake/: CMakeLists.txt  README.md  package.xml
micro_ros_cmake/cmake/: .gitlab-ci.yml  BuildNuttX.cmake
micro_ros_cmake/doc/: NOTES.md
micro_ros_rtos/: CMakeLists.txt  package.xml
micro_ros_setup/: CMakeLists.txt  README.md  package.xml
micro_ros_setup/config/: agent_ros2_packages.txt  agent_uros_packages.repos  client_host_packages.repos  client_minimum.repos  client_ros2_packages.txt  client_uros_packages.repos  dev_ros2_packages.txt  uros_packages.repos
micro_ros_setup/config/FreeRTOS/Crazyflie21/: build.sh  client_uros_packages.repos  create.sh  flash.sh
micro_ros_setup/config/Nuttx/olimex-stm32-e407/: build.sh  client_uros_packages.repos  uros_packages.repos
micro_ros_setup/config/freertos/: list_apps.sh
micro_ros_setup/config/freertos/crazyflie21/: board.repos  build.sh  client_uros_packages.repos  configure.sh  crazyflie.repos  create.sh  flash.sh  package.xml  uros_packages.repos
micro_ros_setup/config/freertos/esp32/: build.sh  configure.sh  create.sh  flash.sh  package.xml
micro_ros_setup/config/freertos/host/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh
micro_ros_setup/config/freertos/nucleo_f446ze/: board.repos  build.sh  configure.sh  create.sh  flash.sh  package.xml
micro_ros_setup/config/freertos/olimex-stm32-e407/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  olimex_e407.repos  package.xml
micro_ros_setup/config/freertos/olimex_e407/: build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  package.xml
micro_ros_setup/config/freertos/stm32f4_disco/: build.sh  configure.sh  flash.sh
micro_ros_setup/config/host/: dev_ros2_packages.txt  package.xml
micro_ros_setup/config/host/generic/: build.sh  client_host_packages.repos  create.sh  flash.sh  package.xml
micro_ros_setup/config/nuttx/: dev_uros_packages.repos
micro_ros_setup/config/nuttx/generic/: build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  package.xml  uros_packages.repos
micro_ros_setup/config/nuttx/olimex-stm32-e407/: build.sh  configure.sh  create.sh
micro_ros_setup/config/raspbian/generic/: build.sh  configure.sh  create.sh  flash.sh  supported_platforms
micro_ros_setup/config/zephyr/: list_apps.sh
micro_ros_setup/config/zephyr/generic/: board.repos  build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  package.xml  supported_platforms
micro_ros_setup/config/zephyr/olimex-stm32-e407/: build.sh  client_uros_packages.repos  configure.sh  create.sh  flash.sh  olimex_e407.repos
micro_ros_setup/config/zephyr/st-b-l475e-iot01a/: board.repos  build.sh  configure.sh  create.sh
micro_ros_setup/doc/: structure.pptx
micro_ros_setup/docker/: Dockerfile.agent  Dockerfile.ci-base  Dockerfile.firmware
micro_ros_setup/scripts/: build_agent.sh  build_firmware.sh  build_nuttx_uros.sh  clean_env.sh  configure_firmware.sh  create_agent_ws.sh  create_bridge_tools.sh  create_client_ws.sh  create_dev_ws.sh  create_firmware_ws.sh  create_host_client_ws.sh  create_ws.sh  flash_firmware.sh  yaml_filter.py
nuttx_kconfig_vendor/: CMakeLists.txt  package.xml
scripts/: build_agent.sh  build_firmware.sh  clean_env.sh  component  configure_firmware.sh  create_agent_ws.sh  create_firmware_ws.sh  create_ws.sh  flash_firmware.sh  reset_firmware.sh  yaml_filter.py
(+32 files in other folders)
