<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_setup</name>
  <version>1.1.1</version>
  <description>Tools for setting up micro-ROS workspaces</description>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Lütkebohle</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>curl</depend>
  <depend>python3-yaml</depend>
  <!-- these are needed to build fastrtps -->
  <buildtool_depend>asio</buildtool_depend>
  <buildtool_depend>tinyxml2</buildtool_depend>
  <!-- end fastrtps deps -->
  <depend>clang-tidy</depend>

  <build_depend>flex</build_depend>
  <build_depend>bison</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>usbutils</build_depend>

  <exec_depend>python3-vcstool</exec_depend>
   
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
