<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_setup</name>
  <version>5.0.0</version>
  <description>Tools for setting up micro-ROS workspaces</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>Apache-2.0</license>

  <depend>curl</depend>
  <depend>python3-yaml</depend>
  <depend>clang-tidy</depend>

  <build_depend>flex</build_depend>
  <build_depend>bison</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <build_depend>usbutils</build_depend>

  <exec_depend>python3-vcstool</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
