<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>micro_ros_cmake</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>
  <license>APL2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>nuttx_kconfig_vendor</buildtool_depend>
  <buildtool_depend>gcc-arm-none-eabi</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
