<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>firmware</name>
  <version>0.0.0</version>
  <description>Micro-ROS dependecies for host platforms</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>APL2</license>

  <build_depend>log4cxx</build_depend>
  <build_depend>clang</build_depend>
  <build_depend>clang-tidy</build_depend>
  <build_depend>clang-format</build_depend>
  
</package>
