<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>firmware</name>
  <version>0.0.0</version>
  <description>This is a dummy package to supply firmware build dependencies.</description>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>
  <license>APL2</license>

  <build_depend>gcc-arm-none-eabi</build_depend>
  <build_depend>clang-tidy</build_depend>
  <build_depend>clang-format</build_depend>
  <build_depend>gperf</build_depend>
  <build_depend>automake</build_depend>
  <build_depend>nuttx_kconfig_vendor</build_depend>
  <build_depend>git</build_depend>
  <build_depend>openocd</build_depend>
  <build_depend>ed</build_depend>

</package>
